# code_qa_api

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  tasks.py
.cursor/rules/: just-update.mdc
docs/: requirements.md
scripts/: evaluate.py
src/code_qa_api/: main.py
src/code_qa_api/api/: models.py  routes.py
src/code_qa_api/core/: config.py  dependencies.py  lifespan.py
src/code_qa_api/rag/: chunking.py  embedding.py  generation.py  indexing.py  retrieval.py  store.py
src/code_qa_api/utils/: file_handler.py
tests/: conftest.py  test_chunking.py  test_main.py  test_rag.py  test_routes.py
tests/scripts/: test_evaluate.py
